Fix category view on mobile Fixes #17

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,8 +37,8 @@ table {
 }
 
 table.relaxed td {
-    padding-top: 0;
-    padding-bottom: 0;
+    padding-top: 0.25rem;
+    padding-bottom: 0rem;
 }
 
 table.hover {
